--- a/index.html
+++ b/index.html
@@ -155,24 +155,14 @@
                 <div class="wrapper">
                     <article class="grid_4">
                     	<h3 class="prev-indent-bot">Shortly About Us</h3>
-                        <h6 class="p1">Sed ut perspiciatis unde omnis</h6>
-                        <p class="img-indent-bot">PSD source files are available for free for the registered members of TemplatesMonster. The basic package is available for anyone without registration. This website template has several pages: <a class="link" href="index.html">Home Page</a>, <a class="link" href="#">Company</a>, <a class="link" href="services.html">Services</a>, <a class="link" href="#">Clients</a>, <a class="link" href="contacts.html">Contacts</a> (note that contact us form – doesn’t work).</p>
-                        <a class="button" href="#"><span>read more</span></a>
+                        <h6 class="p1">text</h6>
+                        <p class="img-indent-bot"> 
                     </article>
                     <article class="grid_4">
                     	<div class="indent-left">
-                        	<h3 class="p1">Fresh Articles</h3>
-                            <ul class="list-1">
-                            	<li><a href="#">Liste natus error sit voluptatem</a></li>
-                                <li><a href="#">Accusantium doloremque laudantium</a></li>
-                                <li><a href="#">Totam rem aperiam, eaque ipsa quae ab illo</a></li> 
-                                <li><a href="#">Inventore veritatis et quasi</a></li>
-                                <li><a href="#">Architecto beatae vitae dicta sunt</a></li>
-                                <li><a href="#">Nemo enim ipsam voluptatem</a></li>
-                                <li><a href="#">Quia voluptas sit aspernatur aut odit aut</a></li>
-                                <li><a href="#">Sed quia consequuntur magni dolores</a></li>
-                                <li><a href="#">Eos qui ratione voluptatem sequi nesciunt</a></li>
-                            </ul>
+                        	<h3 class="p1">Contact Us</h3>
+                            
+                            <h6 class="p1">text</h6>
                         </div>
                     </article>
                     <article class="grid_4">
