--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@
 <body id="page1">
 	<!--==============================header=================================-->
     <header>
-    	<div class="menu-row">
+    	<div>
         	<div class="main">
             	<nav class="wrapper">
                     <ul class="menu">
                         <li><a class="active" href="index.html">Home</a></li>
-                        <li><a href="about.html">About us</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="pricelist.html">Pricelist</a></li>
@@ -63,9 +62,7 @@
     	<div class="row-bot">
             <div class="row-bot-bg">
                 <div class="main">
-                    <div class="wrapper p6">
-                        <h1><a href="index.html">MSGardening.com</a></h1>
-                        <h2>Decorate Your Life With Us!</h2>
+                    <div class="wrapper p6">                       
                     </div>
                     <div class="slider-wrapper">
                         <div class="slider">
@@ -83,7 +80,8 @@
                         </div>
         			</div>
                     <div class="wrapper">
-                    	<figure class="img-indent2"><img src="images/page1-img1.png" alt=""></figure>
+                    	<figure class="img-indent2"><img src="images/page1-img1.png" alt=""></figure> <h2>MS Gardening <br>Decorate Your Life With Us!</h2>
+
                         <div class="extra-wrap">
                         	
                         </div>
@@ -168,8 +166,7 @@
                     <article class="grid_4">
                     	<div class="indent-left2">
                         	<h3>Our Locations</h3>
-                            <figure class="prev-indent-bot"><img src="images/page1-img10.jpg" alt=""></figure>
-                            <a class="link-2" href="#">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia.</a>
+                            <p>text</p>
                         </div>
                     </article>
                 </div>
