--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                         </div>
         			</div>
                     <div class="wrapper">
-                    	<figure class="img-indent2"><img src="images/page1-img1.png" width="120" height="120"></figure> <h2>MS Gardening <br>Decorate Your Life With Us!</h2>
+                    	<figure class="img-indent2"><img src="images/page1-img1.png" width="120" height="120"></figure> <h2>MS Gardening <br>
+                        </h2>
 
                         <div class="extra-wrap">
                         	
