--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                         <li><a class="active" href="index.html">Home</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="pricelist.html">Pricelist</a></li>
-                        <li><a href="contacts.html">Contacts</a></li>
+                        <li><a href="pricelist.html"></a></li>
+                        
                     </ul>
                 </nav>
             </div>
@@ -178,7 +178,8 @@
     <footer>
         <div class="main">
         	<div class="aligncenter">
-            	
+            	msgardening © 2015<br>
+                Website maintained by <a> https://github.com/Bryan1207 </a>
             </div>
         </div>
     </footer>
