--- a/portfolio.html
+++ b/portfolio.html
@@ -29,16 +29,15 @@
 <body id="page4">
 	<!--==============================header=================================-->
     <header>
-    	<div class="menu-row">
+    	<div>
         	<div class="main">
             	<nav class="wrapper">
                     <ul class="menu">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About us</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a class="active" href="portfolio.html">Portfolio</a></li>
-                        <li><a href="pricelist.html">Pricelist</a></li>
-                        <li><a href="contacts.html">Contacts</a></li>
+                        
+                        
                     </ul>
                 </nav>
             </div>
@@ -48,7 +47,7 @@
                 <div class="main">
                     <div class="wrapper">
                         <h1><a href="index.html">Exterior Design</a></h1>
-                        <h2>Decorate Your Life With Us!</h2>
+                        <h2>Recent work - Portfolio</h2>
                     </div>
                 </div>
             </div>
@@ -120,8 +119,8 @@
     <footer>
         <div class="main">
         	<div class="aligncenter">
-            	<p class="p0">Exterior Design &copy; 2012 </p>
-                <a rel="nofollow" href="http://www.templatemonster.com/" target="_blank">Website Template</a> by TemplateMonster.com<br>Great collection of free templates <a href="http://www.websitetemplatesonline.com" target="_blank">here</a>. | <a href="http://www.getjoomlatemplatesfree.com/" title="Joomla!">www.GetJoomlaTemplatesFree.com</a>. Templates best for Joomla. 
+              msgardening © 2015<br>
+                Website maintained by <a> https://github.com/Bryan1207 </a>
             </div>
         </div>
     </footer>
