--- a/services.html
+++ b/services.html
@@ -27,16 +27,16 @@
 <body id="page3">
 	<!--==============================header=================================-->
     <header>
-    	<div class="menu-row">
+    	<div>
         	<div class="main">
             	<nav class="wrapper">
                     <ul class="menu">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About us</a></li>
+                        
                         <li><a class="active" href="services.html">Services</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="pricelist.html">Pricelist</a></li>
-                        <li><a href="contacts.html">Contacts</a></li>
+                        <li><a href="pricelist.html"></a></li>
+                        <li><a href="contacts.html"></a></li>
                     </ul>
                 </nav>
             </div>
@@ -156,8 +156,8 @@
     <footer>
         <div class="main">
         	<div class="aligncenter">
-            	<p class="p0">Exterior Design &copy; 2012 </p>
-                <a rel="nofollow" href="http://www.templatemonster.com/" target="_blank">Website Template</a> by TemplateMonster.com<br>Great collection of free templates <a href="http://www.websitetemplatesonline.com" target="_blank">here</a>. | <a href="http://www.getjoomlatemplatesfree.com/" title="Joomla!">www.GetJoomlaTemplatesFree.com</a>. Templates best for Joomla. 
+                msgardening © 2015<br>
+                Website maintained by <a> https://github.com/Bryan1207 </a>
             </div>
         </div>
     </footer>
