--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             	<nav class="wrapper">
                     <ul class="menu">
                         <li><a class="active" href="index.html">Home</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="services.html"></a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="pricelist.html"></a></li>
                         
