--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
             	<nav class="wrapper">
                     <ul class="menu">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="services.html"></a></li>
                         <li><a class="active" href="portfolio.html">Portfolio</a></li>
                         
                         
