--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
                     <ul class="menu">
                         <li><a href="index.html">Home</a></li>
                         
-                        <li><a class="active" href="services.html">Services</a></li>
+                        <li><a class="active" href="services.html"></a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="pricelist.html"></a></li>
                         <li><a href="contacts.html"></a></li>
