--- a/index.html
+++ b/index.html
@@ -153,20 +153,20 @@
                 <div class="wrapper">
                     <article class="grid_4">
                     	<h3 class="prev-indent-bot">Shortly About Us</h3>
-                        <h6 class="p1">text</h6>
+                        <h6 class="p1">General Assembly's Web Development Immersive is a full-time 12-week course which covers the full stack inJavaScript and Ruby, with the goal of preparing students with a solid skill set to enter the workforce as trained developers.</h6>
                         <p class="img-indent-bot"> 
                     </article>
                     <article class="grid_4">
                     	<div class="indent-left">
                         	<h3 class="p1">Contact Us</h3>
-                            
-                            <h6 class="p1">text</h6>
+                          
+                            <h6 class="p1">General Assembly's Web Development Immersive is a full-time 12-week course which covers the full stack inJavaScript and Ruby, with the goal of preparing students with a solid skill set to enter the workforce as trained developers.</h6>
                         </div>
                     </article>
                     <article class="grid_4">
                     	<div class="indent-left2">
                         	<h3>Our Locations</h3>
-                            <p>text</p>
+                            <h6 class="p1">General Assembly's Web Development Immersive is a full-time 12-week course which covers the full stack inJavaScript and Ruby, with the goal of preparing students with a solid skill set to enter the workforce as trained developers.</h6>
                         </div>
                     </article>
                 </div>
