--- a/portfolio.html
+++ b/portfolio.html
@@ -42,8 +42,8 @@
                 </nav>
             </div>
         </div>
-    	<div class="row-bot">
-            <div class="row-bot-bg">
+    	<div class="">
+            <div class="row">
                 <div class="main">
                     <div class="wrapper">
                         <h1><a href="index.html">Exterior Design</a></h1>
