added fonts, image, content, and footer.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+<!--     Custom Fonts -->
+<link href='https://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
 </head>
 
 
@@ -40,19 +42,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"style="color: white;">MS Gardening</a>
+                <a class="navbar-brand" href="index.html"style="color: white;font-family: 'PT Serif', serif;    font-size: xx-large;">MS Gardening</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html" style="color: white;">About</a>
+                        <a href="about.html" style="color: white;font-family: 'PT Serif', serif;">About</a>
                     </li>
                     <li>
-                        <a href="services.html" style="color: white;">Services</a>
+                        <a href="services.html" style="color: white;font-family: 'PT Serif', serif;">Services</a>
                     </li>
                     <li>
-                        <a href="contact.html" style="color: white;">Contact</a>
+                        <a href="contact.html" style="color: white;font-family: 'PT Serif', serif;">Contact</a>
                     </li>
                  </li>
                 </ul>
@@ -64,43 +66,59 @@
         <!-- /.container -->
     </nav>
 
+    <div class="container-fluid">
+        <div class="row">
+            <img class="img-responsive"src="http://3.bp.blogspot.com/_cNHM9VuxsYw/TBmVziWl8sI/AAAAAAAABSA/-ROUBugpAGI/s1600/sathizblog.blospot.com_wallpapers%2B(16).jpg">
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="text-center"style="font-family: 'PT Serif', serif;color:gray;font-size:312%;">Gardening Made Easy</h2>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-12">
+                <h3 style="text-align:center;margin:80px;">Nunc congue diam eget placerat vehicula. Etiam urna lorem, gravida id mauris sit amet, volutpat posuere augue. Integer in euismod nulla. Maecenas pharetra efficitur lectus et molestie. Maecenas gravida maximus odio id condimentum. Sed vel vehicula nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+            </div>
+        </div>
+    </div>
 
         <!-- Footer -->
     <footer class="foot" id="blue">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12 text-center">
-
-                    <div class="FooterSocial">
-                        <ul>
-                            <li class="FooterSocialItems">
+                <div class="col-md-3">
+                    <li class="FooterSocialItems">
                                 <img src="https://maxcdn.icons8.com/windows10/PNG/48/Logos/yelp-48.png" title="Yelp" width="48">
                                 Read our Reviews on Yelp
                             </li>
-
-                            <li class="FooterSocialItems">
+                </div>
+                <div class="col-md-3">
+                     <li class="FooterSocialItems">
                                 <img src="https://maxcdn.icons8.com/Color/PNG/48/Social_Networks/facebook-48.png" title="Facebook" width="48">
                                 Check us out on Facebook
                             </li>
-
-                            <li class="FooterSocialItems">
+                </div>
+                <div class="col-md-3">
+                    <li class="FooterSocialItems">
                                 <img src="https://maxcdn.icons8.com/Color/PNG/48/Social_Networks/twitter-48.png" title="Twitter" width="48">
                                 Follow us on Twitter
                             </li>
-                            <li class="FooterSocialItems">
+                </div>
+                <div class="col-md-3">
+                    <li class="FooterSocialItems">
                                 <img src="https://maxcdn.icons8.com/Color/PNG/48/Social_Networks/google_plus-48.png" title="Google Plus" width="48">
                                Check us out on Google Plus
                             </li>
-                        </ul>
-                    </div>
-
-
-                     <p class="footp">Copyright © 2016 Moversz Company Inc. All Rights Reserved
-                     <br>TxDMV - (1-888-368-4689) Our TxDOT/DMV # - 0000000B Our US DOT # - 111111</p>
                 </div>
             </div>
         </div>
     </footer>
+
+
 
     </div>
     <!-- /.container -->
