--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid" style="background-color: whitesmoke;">
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="text-center"style="font-family: 'PT Serif', serif;color:gray;font-size:312%;">Gardening Made Easy</h2>
@@ -84,6 +84,54 @@
                 <h3 style="text-align:center;margin:80px;">Nunc congue diam eget placerat vehicula. Etiam urna lorem, gravida id mauris sit amet, volutpat posuere augue. Integer in euismod nulla. Maecenas pharetra efficitur lectus et molestie. Maecenas gravida maximus odio id condimentum. Sed vel vehicula nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
             </div>
         </div>
+    </div>
+
+
+    <div class="container-fluid" style="background-color:rgb(88,164,39);">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="text-center"style="color:white;">What we Offer</h1>
+            </div>
+        </div>
+                <div class="row">
+            <div class="col-md-6">
+                <div class="text-center"style="color:white;font-family: serif;font-size: -webkit-xxx-large;">
+                    1
+                </div>
+                <div>
+                    <p class="text-center"style="color:white;margin: 41px;font-size: x-large;">Nunc congue diam eget placerat vehicula. Etiam urna lorem, gravida id mauris sit amet, volutpat posuere augue.</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="text-center"style="color:white;font-family: serif;font-size: -webkit-xxx-large;">
+                    2
+                </div>
+                <div>
+                    <p class="text-center"style="color:white;margin: 41px;font-size: x-large;">Nunc congue diam eget placerat vehicula. Etiam urna lorem, gravida id mauris sit amet, volutpat posuere augue.</p>
+                </div>
+            </div>
+        </div>
+
+                <div class="row">
+            <div class="col-md-6">
+                <div class="text-center"style="color:white;font-family: serif;font-size: -webkit-xxx-large;">
+                    3
+                </div>
+                <div>
+                    <p class="text-center"style="color:white;margin: 41px;font-size: x-large;">Nunc congue diam eget placerat vehicula. Etiam urna lorem, gravida id mauris sit amet, volutpat posuere augue.</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="text-center"style="color:white;font-family: serif;font-size: -webkit-xxx-large;">
+                    4
+                </div>
+                <div>
+                    <p class="text-center" style="color:white;margin: 41px;font-size: x-large;">Nunc congue diam eget placerat vehicula. Etiam urna lorem, gravida id mauris sit amet, volutpat posuere augue.</p>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
         <!-- Footer -->
