--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -20,7 +21,9 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" type="text/javascript"></script>
 <!--     Custom Fonts -->
 <link href='https://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
 </head>
@@ -81,7 +84,7 @@
         <br>
         <div class="row">
             <div class="col-md-12">
-                <h3 style="text-align:center;margin:80px;">Nunc congue diam eget placerat vehicula. Etiam urna lorem, gravida id mauris sit amet, volutpat posuere augue. Integer in euismod nulla. Maecenas pharetra efficitur lectus et molestie. Maecenas gravida maximus odio id condimentum. Sed vel vehicula nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                <h3 class="text-center" style="margin-left: 20%;margin-right: 20%;margin-bottom: 5%;">A well maintained garden provides a great look and feel to any home and increases the appeal of your property. We can tailor a garden maintenance program to suit your garden’s needs or simply provide a once off visit.</h3>
             </div>
         </div>
     </div>
@@ -90,7 +93,7 @@
     <div class="container-fluid" style="background-color:rgb(88,164,39);">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="text-center"style="color:white;">What we Offer</h1>
+                <h1 class="text-center"style="color:white;font-family: 'PT Serif', serif; ">What we Offer</h1>
             </div>
         </div>
                 <div class="row">
@@ -130,12 +133,26 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 
+    <!-- Google Map -->
+<div class="container-fluid" style="background-color: ">
+    <div class="container">
+        <div class="row">
+            <div class="GoogleMap">
+            <h1>Serving the Bay Area</h1>
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d429173.5499896937!2d-97.0122152735137!3d32.82092807710669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864c19f77b45974b%3A0xb9ec9ba4f647678f!2sDallas%2C+TX!5e0!3m2!1sen!2sus!4v1454032683544" width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" allowfullscreen></iframe>
+        </div>
+        </div>
+    </div>
+</div>
+<!-- Google endd -->
+
+
+
+
         <!-- Footer -->
-    <footer class="foot" id="blue">
+    <footer class="foot">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
@@ -179,6 +196,8 @@
     <script src="inc/jquery.mb.YTPlayer.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+
 
 
 </body>
