--- a/index.html
+++ b/index.html
@@ -155,40 +155,77 @@
     <footer class="foot">
         <div class="container-fluid">
             <div class="row">
+                <div class="col-lg-12"><h2 class="text-center">Connect With Us</h2></div>
+            </div>
+            <div class="row">
                 <div class="col-md-3">
                     <li class="FooterSocialItems">
                                 <img src="https://maxcdn.icons8.com/windows10/PNG/48/Logos/yelp-48.png" title="Yelp" width="48">
-                                Read our Reviews on Yelp
+                                Yelp
                             </li>
                 </div>
                 <div class="col-md-3">
                      <li class="FooterSocialItems">
                                 <img src="https://maxcdn.icons8.com/Color/PNG/48/Social_Networks/facebook-48.png" title="Facebook" width="48">
-                                Check us out on Facebook
+                                Facebook
                             </li>
                 </div>
                 <div class="col-md-3">
                     <li class="FooterSocialItems">
                                 <img src="https://maxcdn.icons8.com/Color/PNG/48/Social_Networks/twitter-48.png" title="Twitter" width="48">
-                                Follow us on Twitter
+                                Twitter
                             </li>
                 </div>
                 <div class="col-md-3">
                     <li class="FooterSocialItems">
                                 <img src="https://maxcdn.icons8.com/Color/PNG/48/Social_Networks/google_plus-48.png" title="Google Plus" width="48">
-                               Check us out on Google Plus
+                               Google Plus
                             </li>
                 </div>
             </div>
+                    <!-- Contact Form -->
+        <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
+        <div class="row">
+            <div class="col-md-8">
+                <h3>Send us a Message</h3>
+                <form name="sentMessage" id="contactForm" novalidate>
+                    <div class="control-group form-group">
+                        <div class="controls">
+                            <label>Full Name:</label>
+                            <input type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+                    <div class="control-group form-group">
+                        <div class="controls">
+                            <label>Phone Number:</label>
+                            <input type="tel" class="form-control" id="phone" required data-validation-required-message="Please enter your phone number.">
+                        </div>
+                    </div>
+                    <div class="control-group form-group">
+                        <div class="controls">
+                            <label>Email Address:</label>
+                            <input type="email" class="form-control" id="email" required data-validation-required-message="Please enter your email address.">
+                        </div>
+                    </div>
+                    <div class="control-group form-group">
+                        <div class="controls">
+                            <label>Message:</label>
+                            <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
+                        </div>
+                    </div>
+                    <div id="success"></div>
+                    <!-- For success/fail messages -->
+                    <button type="submit" class="btn btn-primary">Send Message</button>
+                </form>
+            </div>
+
+        </div>
         </div>
     </footer>
 
-
-
     </div>
     <!-- /.container -->
-
-
 
 
     <!-- jQuery -->
