links disabled for the navbar

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html" style="color: white;font-family: 'PT Serif', serif;">About</a>
+                        <a href="#" style="color: white;font-family: 'PT Serif', serif;">About</a>
                     </li>
                     <li>
-                        <a href="services.html" style="color: white;font-family: 'PT Serif', serif;">Services</a>
+                        <a href="#" style="color: white;font-family: 'PT Serif', serif;">Services</a>
                     </li>
                     <li>
-                        <a href="contact.html" style="color: white;font-family: 'PT Serif', serif;">Contact</a>
+                        <a href="#" style="color: white;font-family: 'PT Serif', serif;">Contact</a>
                     </li>
                  </li>
                 </ul>
