--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 
-			<div class="container">
+			<div class="container"style="background-color:whitesmoke;">
 				<div class="row"><h1 style="text-align:center;font-family:serif;">Services</h1><hr></div>
 				<div class="row">
 					<div class="col-md-3">
@@ -136,14 +136,23 @@
 </div>
 
 <!-- Footer  -->
-<div class="container">
+<div class="container" style="background-color:whitesmoke;">
+	<div class="row" style="padding-top: 22px;">
+		<div class="col-md-3 col-md-offset-2"><img src="image/logo.png" style=" width:30px; height:30px;margin-right: 2%;">MsGardening</div>
+		<div class="col-md-3"><img src="image/mail.png" style="margin-right: 2%;">Tony.Msgardening.com</div>
+		<div class="col-md-3"><img src="image/icon6.png" style="margin-right: 2%;">(408)762-8840</div>
+	</div>
 	<div class="row">
-		<div class="col-md-3 col-md-offset-2">MsGardening</div>
-		<div class="col-md-3">Tony.Msgardening.com</div>
-		<div class="col-md-3">(408)762-8840</div>
+		<div class="col-sm-12">
+			<p style="text-align:center;">
+				<img src="image/icon1.png" style="margin-right: 3%;margin-left:3%;">
+				<img src="image/icon2.png" style="margin-right: 3%;">
+				<img src="image/icon3.png" style="margin-right: 3%;">
+				<img src="image/mail.png" style="margin-right: 3%;">
+			</p>
+		</div>
 	</div>
 </div>
-	
 
 
 
