--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 					<div class="col-md-3">
 						<p style="text-align:left;"><img src="image/c4.jpg"></p>
 						<h4>New Lawn</h4>
-						<p>Adding custom color specific to the complexion of your yard. 
-We take time in making sure you can feel proud to step into 
-your personal paradise by offering weekly maintenance.
+						<p>Start to finish, fresh new grass. 
+We handle all aspects of irrigation as well as fertilizing. 
+To give your home a nice new look 
 </p>
 					</div>
 					<div class="col-md-3">
 						<p style="text-align:center;"><img src="image/c1.jpg"></p>
 						<h4>Clean Ups </h4>
 						<p>We remove any undesirable mess that can compile over time in your yard.
-leaving your home looking organized, and welcoming for your guests. </p>
+leaving your home looking organized, and welcoming for your guests.  </p>
 					</div>
 					<div class="col-md-3">
 						<p style="text-align:center;"><img src="image/c3.jpg"></p>
@@ -70,9 +70,9 @@ All while maintaining a beauty that can last a lifetime.</p>
 					<div class="col-md-3">
 						<p style="text-align:right;"><img src="image/c2.jpg"></p>
 						<h4>New Plants</h4>
-						<p>We have the tools and experience to keep your trees in shape, 
-making sure your trees fulfill any contemporary standards. 
-All while maintaining a beauty that can last a lifetime. </p>
+						<p>Adding custom color specific to the complexion of your yard. 
+We take time in making sure you can feel proud to step into 
+your personal paradise by offering weekly maintenance.  </p>
 					</div>
 				</div>
 			</div>
