--- a/index.html
+++ b/index.html
@@ -98,48 +98,39 @@ your personal paradise by offering weekly maintenance.  </p>
 	</div>
 	<!-- this is the form to email us -->
 	<div class="container">
-<form class="form-horizontal" role="form" method="post" action="index.php">
+
+
+
+
+
+
+
+<form class="form-horizontal" action="//formspree.io/tony@msgardening.com">
     <div class="form-group">
         <label for="name" class="col-sm-2 control-label">First Name</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" id="name" name="name" placeholder="First Name" value="">
+            <input type="text" class="form-control" name="First Name" placeholder="First Name">
         </div>
     </div>
      <div class="form-group">
         <label for="name" class="col-sm-2 control-label">Last Name</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" id="name" name="name" placeholder="Last Name" value="">
-        </div>
-    </div>
-         <div class="form-group">
-        <label for="name" class="col-sm-2 control-label">Phone</label>
-        <div class="col-sm-8">
-            <input type="text" class="form-control" id="name" name="name" placeholder="Phone Number" value="">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="email" class="col-sm-2 control-label">Email Adress</label>
-        <div class="col-sm-8">
-            <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email address here so we can contact you." value="">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="message" class="col-sm-2 control-label">Message</label>
-        <div class="col-sm-8">
-            <textarea class="form-control" rows="4" name="Leave us a message" placeholder="Leave us a message here.."></textarea>
+            <input type="text" class="form-control" name="name" placeholder="Last Name">
         </div>
     </div>
     <div class="form-group">
         <div class="col-sm-12 ">
-            <p class="text-center"><input id="submit" name="submit" type="submit" value="Submit" class="btn btn-success"></p>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-8 col-sm-offset-2">
-            <! Will be used to display an alert to the user>
+            <p class="text-center"><input type="submit" value="Send" class="btn btn-success"></p>
         </div>
     </div>
 </form>
+
+
+
+
+
+
+
 </div>	
 </div>
 
