--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ your personal paradise by offering weekly maintenance.  </p>
 
 
 
-<form class="form-horizontal" action="//formspree.io/tony@msgardening.com">
+<form class="form-horizontal" action="//formspree.io/tony@msgardening.com" method="POST">
     <div class="form-group">
         <label for="name" class="col-sm-2 control-label">First Name</label>
         <div class="col-sm-8">
