--- a/index.html
+++ b/index.html
@@ -107,17 +107,24 @@ your personal paradise by offering weekly maintenance.  </p>
 
 <form class="form-horizontal" action="//formspree.io/tony@msgardening.com" method="POST">
     <div class="form-group">
-        <label for="name" class="col-sm-2 control-label">First Name</label>
+        <label for="name" class="col-sm-2 control-label">Name</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" name="First Name" placeholder="First Name">
+            <input type="text" class="form-control" name="First Name" placeholder="Name">
         </div>
     </div>
      <div class="form-group">
-        <label for="name" class="col-sm-2 control-label">Last Name</label>
+        <label for="name" class="col-sm-2 control-label">Phone</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" name="name" placeholder="Last Name">
+            <input type="text" class="form-control" name="Phone" placeholder="Enter your'e phone number so we can contact you.">
         </div>
     </div>
+         <div class="form-group">
+        <label for="name" class="col-sm-2 control-label">Message</label>
+        <div class="col-sm-8">
+            <input type="text" class="form-control" name="Message" placeholder="Message">
+        </div>
+    </div>
+
     <div class="form-group">
         <div class="col-sm-12 ">
             <p class="text-center"><input type="submit" value="Send" class="btn btn-success"></p>
@@ -139,7 +146,7 @@ your personal paradise by offering weekly maintenance.  </p>
 	<div class="row" style="padding-top: 22px;">
 		<div class="col-md-3 col-md-offset-2"><img src="image/logo.png" style=" width:30px; height:30px;margin-right: 2%;">MsGardening</div>
 		<div class="col-md-3"><img src="image/mail.png" style="margin-right: 2%;">Tony.Msgardening.com</div>
-		<div class="col-md-3"><img src="image/icon6.png" style="margin-right: 2%;">(408)509-2979</div>
+		<div class="col-md-3"><img src="image/icon6.png" style="margin-right: 2%;">(408) 509-2979</div>
 	</div>
 	<div class="row">
 		<div class="col-sm-12">
