--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@ your personal paradise by offering weekly maintenance.  </p>
     <div class="form-group">
         <label for="name" class="col-sm-2 control-label">Name</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" name="First Name" placeholder="Name">
+            <input type="text" class="form-control" name="Name" placeholder="Name">
         </div>
     </div>
      <div class="form-group">
         <label for="name" class="col-sm-2 control-label">Phone</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" name="Phone" placeholder="Enter your'e phone number so we can contact you.">
+            <input type="text" class="form-control" name="Call Back #" placeholder="Enter your'e phone number so we can contact you.">
         </div>
     </div>
          <div class="form-group">
         <label for="name" class="col-sm-2 control-label">Message</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" name="Message" placeholder="Message">
+            <input type="text" class="form-control" name="Message" style="height:80px;">
         </div>
     </div>
 
