--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ your personal paradise by offering weekly maintenance.  </p>
      <div class="form-group">
         <label for="name" class="col-sm-2 control-label">Phone</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" name="Call Back #" placeholder="Enter your'e phone number so we can contact you.">
+            <input type="text" class="form-control" name="Call Back #" placeholder="Enter your phone number so we can contact you.">
         </div>
     </div>
          <div class="form-group">
