--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<!-- 	Navigation -->
 <div class="container" id="header">
-	<div class="row" style="margin-bottom: 0px;">
+	<div class="row" style="margin-bottom: 0px;display:flex;">
 		<div class="col-md-1"><img src="image/logo.png" class="img-responsive" width="60px;" height="60px;"></div>
 		<div class="col-md-6"><h1 style="color:white; margin-top: 0px;margin-bottom: 0px;padding-top: 8px; font-family:serif;">MsGardening</h1></div>
 		<div class="col-md-5" style="color:white;text-align:right;padding-right: 44px;font-size: large;font-family:serif;">Call for a free Qoute<br>(408) 509-2979</div>
