--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div class="row"><h1 style="text-align:center;font-family:serif;">Services</h1><hr></div>
 				<div class="row">
 					<div class="col-md-3">
-						<p style="text-align:left;"><img src="image/c4.jpg"></p>
+						<p class="limage"><img src="image/c4.jpg"></p>
 						<h4>New Lawn</h4>
 						<p>Start to finish, fresh new grass. 
 We handle all aspects of irrigation as well as fertilizing. 
@@ -68,7 +68,7 @@ making sure your trees fulfill any contemporary standards.
 All while maintaining a beauty that can last a lifetime.</p>
 					</div>
 					<div class="col-md-3">
-						<p style="text-align:right;"><img src="image/c2.jpg"></p>
+						<p class= "rimage"><img src="image/c2.jpg"></p>
 						<h4>New Plants</h4>
 						<p>Adding custom color specific to the complexion of your yard. 
 We take time in making sure you can feel proud to step into 
