--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<!-- 	Navigation -->
 		<div class="container" id="header">
 			<div class="row" style="margin-bottom: 0px;">
-				<div class="col-xs-2"><img src="image/logo.png" class="img-responsive" width="60px;" height="60px;"></div>
+				<div class="col-xs-2"id="logo" ><img src="image/logo.png" class="img-responsive" width="60px;" height="60px;"></div>
 				<div class="col-xs-5"><h1 style="color:white; margin-top: 0px;margin-bottom: 0px;padding-top: 8px; font-family:serif;">MsGardening</h1></div>
-				<div class="col-xs-5" style="color:white;text-align:right;padding-right: 3%;font-size: large;font-family:serif;">Call for a free Qoute<br>(408) 509-2979</div>
+				<div id="colswap"class="col-xs-5" style="color:white;text-align:right;padding-right: 3%;font-size: large;font-family:serif;">Call for a free Qoute<br>(408) 509-2979</div>
 			</div>
 		</div>
 	</div>
