--- a/index.html
+++ b/index.html
@@ -5,24 +5,75 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600italic' rel='stylesheet' type='text/css'>
+		<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div class="container">
+
+
+
+<nav class="navbar navbar-default navbar-fixed-top center-block" >
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="#"><img class="img-responsive " alt="Brand" src="http://i.imgur.com/hCwN9SF.png" style="max-width: 140px;padding-left: 18px;"></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav nav-links" style="display:flex; padding-top:1%;">
+        <li ><a href="#" style="color:black;">Contact <span class="sr-only">(current)</span></a></li>
+        <li><a href="#" style="color:black;">Services</a></li>
+        <li><a href="#" style="color:black;">About Us</a></li>
+      </ul>
+      <li class="hidden-xs" style="padding-right:18px; list-style:none;float: right;"><a href="#"><button class="btn btn-success btn-lg navbar-btn" style="color: white;font-family: 'Source Sans Pro', sans-serif; margin-top: 13px;">Get a Quote</button></a></li>
+<!--       <ul class="nav navbar-nav navbar-right">
+        <li class="hidden-xs" style="padding-right:14px;"><a href="#"><button class="btn btn-success btn-lg navbar-btn" style="color: white;font-family: 'Source Sans Pro', sans-serif;">Get a Quote</button></a></li>
+      </ul> -->
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container -->
+</nav>
+
+
+
+
+<!-- 	<div class="container"> -->
 		<!-- 	Navigation -->
-		<div class="container" id="header">
-			<div class="row" style="margin-bottom: 0px;">
-				<div class="col-xs-2"id="logo" ><img src="image/logo.png" class="img-responsive" width="60px;" height="60px;"></div>
-				<div class="col-xs-5"><h1 style="color:white; margin-top: 0px;margin-bottom: 0px;padding-top: 8px; font-family:serif;">MsGardening</h1></div>
-				<div id="colswap"class="col-xs-5" style="color:white;text-align:right;padding-right: 3%;font-size: large;font-family:serif;">Call for a free Qoute<br>(408) 509-2979</div>
+<!-- 		<div class="container " id="header">
+			<div class="row " style="margin-bottom: 0px;">
+				<div class="col-xs-2"id="logo" >
+					<a href="#"><img src="http://i.imgur.com/hCwN9SF.png" class="img-responsive" style="margin-left: 18px;"></a>
+				</div>
+				<div class="col-xs-2 col-xs-offset-1">
+						<a href="#"><p style="padding-top:20%;color: black;font-size:15px;">Contact</p></a>
+				</div>
+				<div class="col-xs-2">
+						<a href="#"><p style="padding-top:20%;color: black;font-size:15px;">Services</p></a>
+				</div>
+				<div class="col-xs-2">
+						<a href="#"><p style="padding-top:20%;color: black;font-size:15px;">About Us</p></a>
+				</div>
+
+				<div class="col-xs-3" id="getaquote">
+						<a href="#"><button class="btn btn-success btn-lg" style="color: white;font-family: 'Source Sans Pro', sans-serif;">Get a Quote</button></a>
+				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 
 <!-- This is our Courasel -->
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12">
+				<div class="col-xs-12">
 					<img class="img-responsive" src="image/yard2.jpg">
 				</div>
 			</div>
@@ -36,8 +87,8 @@
 					<p style="color:#5C3623; font-family:serif; font-size:18px;">MS Gardening is a hard working team of creative individuals who take pride in their projects. We enjoy working alongside our clients each step of the way. We help create the vision you have for your home, and we are good at what we do. We combine our passion and experience with our clients ideas to create something truly monumental. <br><br>We make it our mission to help each clients feel pleased to have hired us . We are proud to offer reasonable prices along with great customer service. With our precision and dedication to quality there is no project to simple, or complex we can not tackle.</p>	
 				</div>
 				<div class="col-md-4">
-					<img src="image/yard3.jpg" class="center-block"><br>
-					<img class="center-block" src="image/yard4.jpg">
+					<img id="mi"src="image/yard3.jpg" class="center-block"><br>
+					<img id="mi"class="center-block" src="image/yard4.jpg">
 				</div>
 			</div>
 
@@ -159,10 +210,6 @@ your personal paradise by offering weekly maintenance.  </p>
 		</div>
 	</div>
 </div>
-
-
-
-
 </body>
 </html>
 
