link jumps added

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav nav-links" style="display:flex; padding-top:1%;">
-        <li ><a href="#" style="color:black;">Contact <span class="sr-only">(current)</span></a></li>
-        <li><a href="#" style="color:black;">Services</a></li>
-        <li><a href="#" style="color:black;">About Us</a></li>
+        <li ><a href="#contact" style="color:black;">Contact <span class="sr-only">(current)</span></a></li>
+        <li><a href="#services" style="color:black;">Services</a></li>
+        <li><a href="#aboutus" style="color:black;">About Us</a></li>
       </ul>
       <li class="hidden-xs" style="padding-right:18px; list-style:none;float: right;"><a href="#"><button class="btn btn-success btn-lg navbar-btn" style="color: white;font-family: 'Source Sans Pro', sans-serif; margin-top: 13px;">Get a Quote</button></a></li>
 <!--       <ul class="nav navbar-nav navbar-right">
@@ -80,7 +80,7 @@
 		</div>
 
 <!-- This is our body content -->
-		<div class="container">
+		<div class="container" id="aboutus">
 			<div class="row">
 				<div class="col-md-8">
 					<h1 style="color:#666600;font-family:serif;">About Us</h1>
@@ -94,7 +94,7 @@
 
 
 
-			<div class="container"style="background-color:whitesmoke;">
+			<div class="container"style="background-color:whitesmoke;" id="services">
 				<div class="row"><h1 style="text-align:center;font-family:serif;">Services</h1><hr></div>
 				<div class="row">
 					<div class="col-md-3">
@@ -142,7 +142,7 @@ your personal paradise by offering weekly maintenance.  </p>
 		</div> -->
 
 	</div>
-	<div class="container">
+	<div class="container" id="contact">
 		<div class="row">
 			<div class="text-center"><h1>Contact Us</h1></div>
 		</div>
