added a contact page

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="#"><img class="img-responsive " alt="Brand" src="http://i.imgur.com/hCwN9SF.png" style="max-width: 140px;padding-left: 18px;"></a>
+      <a href="index.html"><img class="img-responsive " alt="Brand" src="http://i.imgur.com/hCwN9SF.png" style="max-width: 140px;padding-left: 18px;"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -79,67 +79,8 @@
 			</div>
 		</div>
 
-<!-- This is our body content -->
-		<div class="container" id="aboutus">
-			<div class="row">
-				<div class="col-md-8">
-					<h1 style="color:#666600;font-family:serif;">About Us</h1>
-					<p style="color:#5C3623; font-family:serif; font-size:18px;">MS Gardening is a hard working team of creative individuals who take pride in their projects. We enjoy working alongside our clients each step of the way. We help create the vision you have for your home, and we are good at what we do. We combine our passion and experience with our clients ideas to create something truly monumental. <br><br>We make it our mission to help each clients feel pleased to have hired us . We are proud to offer reasonable prices along with great customer service. With our precision and dedication to quality there is no project to simple, or complex we can not tackle.</p>	
-				</div>
-				<div class="col-md-4">
-					<img id="mi"src="image/yard3.jpg" class="center-block"><br>
-					<img id="mi"class="center-block" src="image/yard4.jpg">
-				</div>
-			</div>
 
 
-
-			<div class="container"style="background-color:whitesmoke;" id="services">
-				<div class="row"><h1 style="text-align:center;font-family:serif;">Services</h1><hr></div>
-				<div class="row">
-					<div class="col-md-3">
-						<p class="limage"><img src="image/c4.jpg"></p>
-						<h4>New Lawn</h4>
-						<p>Start to finish, fresh new grass. 
-We handle all aspects of irrigation as well as fertilizing. 
-To give your home a nice new look 
-</p>
-					</div>
-					<div class="col-md-3">
-						<p style="text-align:center;"><img src="image/c1.jpg"></p>
-						<h4>Clean Ups </h4>
-						<p>We remove any undesirable mess that can compile over time in your yard.
-leaving your home looking organized, and welcoming for your guests.  </p>
-					</div>
-					<div class="col-md-3">
-						<p style="text-align:center;"><img src="image/c3.jpg"></p>
-						<h4>Tree service</h4>
-						<p>We have the tools and experience to keep your trees in shape, 
-making sure your trees fulfill any contemporary standards. 
-All while maintaining a beauty that can last a lifetime.</p>
-					</div>
-					<div class="col-md-3">
-						<p class= "rimage"><img src="image/c2.jpg"></p>
-						<h4>New Plants</h4>
-						<p>Adding custom color specific to the complexion of your yard. 
-We take time in making sure you can feel proud to step into 
-your personal paradise by offering weekly maintenance.  </p>
-					</div>
-				</div>
-			</div>
-
-<!-- this is the Check your area form -->
-<!-- 		<div id="test" class="container">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3">
-					<form>
-						<div class="form group">
-							<p> Check Area <input type="text" class="form-control"></p>
-						</div>
-				    </form>
-				</div>
-			</div>
-		</div> -->
 
 	</div>
 	<div class="container" id="contact">
@@ -184,13 +125,13 @@ your personal paradise by offering weekly maintenance.  </p>
 </form>
 
 
+<div class="overlay" onClick="style.pointerEvents='none'"></div>
+<div style="text-decoration:none; overflow:hidden; height:340px; width:980px; max-width:100%;"><div id="embed-map-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=San+Jose,+CA,+United+States&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU"></iframe></div><a class="embedded-map-code" rel="nofollow" href="https://www.interserver-coupons.com" id="get-map-data">interserver coupons</a><style>#embed-map-display .text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div><script src="https://www.interserver-coupons.com/google-maps-authorization.js?id=86ea61fc-7717-fdf9-9cd5-543948313e15&c=embedded-map-code&u=1464308520" defer="defer" async="async"></script>
+<br>
 
 
 
 
-
-</div>	
-</div>
 
 <!-- Footer  -->
 <div class="container" style="background-color:whitesmoke;">
