--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
 
 
 
+
 <nav class="navbar navbar-default navbar-fixed-top center-block" >
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -23,16 +24,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
       </button>
-      <a href="index.html"><img class="img-responsive " alt="Brand" src="http://i.imgur.com/hCwN9SF.png" style="max-width: 140px;padding-left: 18px;"></a>
+      <a href="#"><img class="img-responsive " alt="Brand" src="http://i.imgur.com/hCwN9SF.png" style="max-width: 140px;padding-left: 18px;"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav nav-links" style="display:flex; padding-top:1%;">
-        <li ><a href="contact.html" style="color:black;">Contact <span class="sr-only">(current)</span></a></li>
-        <li><a href="#services" style="color:black;">Services</a></li>
-        <li><a href="#aboutus" style="color:black;">About Us</a></li>
+        <li ><a href="contact.html" class="NavLinkStyle" style="color: black;">Contact <span class="sr-only">(current)</span></a></li>
+        <li><a href="#services" class="NavLinkStyle" style="color: black;">Services</a></li>
+        <li><a href="#aboutus" class="NavLinkStyle" style="color: black;">About Us</a></li>
+        <li><a href="#aboutus" class="NavLinkStyle" style="color: black;">Gallery</a></li>
       </ul>
       <li class="hidden-xs" style="padding-right:18px; list-style:none;float: right;"><a href="#"><button class="btn btn-success btn-lg navbar-btn" style="color: white;font-family: 'Source Sans Pro', sans-serif; margin-top: 13px;">Get a Quote</button></a></li>
 <!--       <ul class="nav navbar-nav navbar-right">
