--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="#"><img class="img-responsive " alt="Brand" src="http://i.imgur.com/hCwN9SF.png" style="max-width: 140px;padding-left: 18px;"></a>
+      <a href="index.html"><img class="img-responsive " alt="Brand" src="http://i.imgur.com/hCwN9SF.png" style="max-width: 140px;padding-left: 18px;"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
